feat: Add 12 new analysis modules and MCP server
New Analysis Modules:
- Dependency Visualization (codexia graph) - ASCII, Mermaid, DOT formats
- Complexity Analysis (codexia complexity) - cyclomatic, cognitive, maintainability metrics
- Temporal Analysis (codexia history) - git history intelligence, churn, ownership
- Architectural Invariants (codexia invariants) - enforce layer boundaries and rules
- Hot Path Detection (codexia hotpaths) - identify critical code paths
- Changelog Generation (codexia changelog) - semantic changelogs from commits
- Monorepo Support (codexia monorepo) - npm/yarn/pnpm/lerna/nx/turborepo
- Smart Test Prioritization - intelligent test ordering based on impact
- Enhanced Watch Mode (codexia watch) - live analysis during development

AI Integration:
- MCP Server (codexia mcp-server) for Claude and other AI assistants
- 10 tools: scan, impact, context, validate, signals, tests, dependencies, hotpaths, complexity, memory

New Files:
- src/modules/visualizer.ts
- src/modules/complexity-engine.ts
- src/modules/temporal-analyzer.ts
- src/modules/invariant-engine.ts
- src/modules/hot-path-detector.ts
- src/modules/changelog-generator.ts
- src/modules/monorepo-analyzer.ts
- src/modules/smart-test-prioritizer.ts
- src/modules/watcher.ts
- src/mcp/server.ts
- src/cli/commands/{graph,complexity,history,invariants,hotpaths,changelog,monorepo,mcp-server}.ts
- codexia.invariants.example.yaml

Documentation:
- Comprehensive README with all new commands
- Updated architecture.md with system diagrams
- Created CHANGELOG.md
- Updated package.json to v0.2.0

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codexia",
-  "version": "0.1.0",
-  "description": "Engineering intelligence layer for repositories",
+  "version": "0.2.0",
+  "description": "Engineering intelligence layer for repositories - analyze impact, complexity, history, and enforce architectural invariants",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,14 +14,22 @@
     "dev": "tsc --watch",
     "test": "vitest",
     "lint": "eslint src --ext .ts",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "mcp": "node dist/mcp/server.js"
   },
   "keywords": [
     "code-analysis",
     "engineering-intelligence",
     "git",
     "impact-analysis",
-    "developer-tools"
+    "developer-tools",
+    "complexity",
+    "monorepo",
+    "architectural-invariants",
+    "mcp",
+    "ai-tools",
+    "changelog",
+    "dependency-graph"
   ],
   "author": "Seshan Pillay",
   "license": "AGPL-3.0",
@@ -40,5 +48,13 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seshxn/codexia.git"
+  },
+  "bugs": {
+    "url": "https://github.com/seshxn/codexia/issues"
+  },
+  "homepage": "https://github.com/seshxn/codexia#readme"
 }
