--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "author": "Seshan Pillay",
   "license": "AGPL-3.0",
   "dependencies": {
+    "@inquirer/prompts": "^8.2.0",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "glob": "^10.3.10",
