--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "@inquirer/prompts": "^8.2.0",
+    "boxen": "^8.0.1",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
     "glob": "^10.3.10",
+    "gradient-string": "^3.0.0",
+    "ora": "^9.0.0",
     "simple-git": "^3.22.0",
     "ts-morph": "^21.0.1",
     "yaml": "^2.3.4"
