--- a/package.json
+++ b/package.json
@@ -50,6 +50,11 @@
     "typescript": "^5.3.3",
     "vitest": "^1.2.0"
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "engines": {
     "node": ">=18.0.0"
   },
