feat: enhance release workflow with separate push for version bump and tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -217,7 +217,15 @@ jobs:
         run: |
           git add package.json package-lock.json CHANGELOG.md
           git commit -m "chore: release v${{ needs.build.outputs.version }}"
+
+      - name: Push changes
+        run: |
+          git push origin "${{ github.event.repository.default_branch }}"
+
+      - name: Create and push tag
+        run: |
           git tag ${{ needs.build.outputs.tag }}
+          git push origin ${{ needs.build.outputs.tag }}
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
@@ -229,10 +237,6 @@ jobs:
           generate_release_notes: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Push changes
-        run: |
-          git push origin "${{ github.event.repository.default_branch }}" ${{ needs.build.outputs.tag }}
 
       - name: Publish to npm
         run: |
