--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,15 +3,6 @@ name: Release
 on:
   workflow_dispatch:
     inputs:
-      version:
-        description: 'Version bump type'
-        required: true
-        default: 'patch'
-        type: choice
-        options:
-          - patch
-          - minor
-          - major
       prerelease:
         description: 'Prerelease tag (leave empty for stable release)'
         required: false
@@ -19,11 +10,11 @@ on:
         type: string
 
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.version.outputs.version }}
-      tag: ${{ steps.version.outputs.tag }}
+    permissions:
+      contents: write
+      id-token: write
     
     steps:
       - name: Checkout
@@ -46,158 +37,39 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Calculate version
+      - name: Get version from package.json
         id: version
         run: |
-          # Simulate version bump to get the new version using npm's own logic
-          CURRENT=$(node -p "require('./package.json').version")
-          
-          if [ -n "${{ inputs.prerelease }}" ]; then
-            # Prerelease bump, e.g. prepatch, preminor, premajor
-            npm version "pre${{ inputs.version }}" --preid="${{ inputs.prerelease }}" --no-git-tag-version
-          else
-            # Regular release bump: patch, minor, or major
-            npm version "${{ inputs.version }}" --no-git-tag-version
-          fi
-          
           VERSION=$(node -p "require('./package.json').version")
-          
-          # Reset package.json back to original version for the build job
-          git checkout package.json package-lock.json
-          
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "tag=v$VERSION" >> $GITHUB_OUTPUT
-          echo "## 📦 Release Preview" >> $GITHUB_STEP_SUMMARY
+          echo "## 📦 Release" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "| Property | Value |" >> $GITHUB_STEP_SUMMARY
           echo "|----------|-------|" >> $GITHUB_STEP_SUMMARY
-          echo "| Current Version | $CURRENT |" >> $GITHUB_STEP_SUMMARY
-          echo "| New Version | $VERSION |" >> $GITHUB_STEP_SUMMARY
-          echo "| Bump Type | ${{ inputs.version }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Version | $VERSION |" >> $GITHUB_STEP_SUMMARY
+          echo "| Tag | v$VERSION |" >> $GITHUB_STEP_SUMMARY
           echo "| Prerelease | ${{ inputs.prerelease || 'none' }} |" >> $GITHUB_STEP_SUMMARY
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist
-          path: dist/
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      id-token: write
-    
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          # Note: If the repository has branch protection rules on the default branch,
-          # consider using a Personal Access Token (PAT) or GitHub App token with
-          # appropriate permissions instead of GITHUB_TOKEN to allow pushing to protected branches
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: dist
-          path: dist/
-
-      - name: Configure Git
+      - name: Check if tag already exists
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Bump version
-        id: version
-        env:
-          NEW_VERSION: ${{ needs.build.outputs.version }}
-        run: |
-          echo "Bumping to version ${NEW_VERSION}"
-          
-          # Update package.json to use the version computed in the build job
-          node -e "
-            const fs = require('fs');
-            const path = require('path');
-            const pkgPath = path.join(process.cwd(), 'package.json');
-            const pkg = JSON.parse(fs.readFileSync(pkgPath, 'utf8'));
-            pkg.version = process.env.NEW_VERSION;
-            fs.writeFileSync(pkgPath, JSON.stringify(pkg, null, 2) + '\n');
-          "
-          
-          # Update package-lock.json to reflect the new version
-          npm install --package-lock-only
-          
-          echo "Bumped to version ${NEW_VERSION}"
-          echo "version=${NEW_VERSION}" >> "$GITHUB_OUTPUT"
+          if git rev-parse "v${{ steps.version.outputs.version }}" >/dev/null 2>&1; then
+            echo "❌ Tag v${{ steps.version.outputs.version }} already exists!"
+            echo "Please bump the version in package.json before releasing."
+            exit 1
+          fi
 
       - name: Generate release notes
         id: release_notes
         run: |
-          # Get the previous tag
           PREVIOUS_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
           
           if [ -z "$PREVIOUS_TAG" ]; then
-            # First release - get all commits
-            COMMITS=$(git log --pretty=format:"- %s (%h)" --no-merges)
+            COMMITS=$(git log --pretty=format:"- %s (%h)" --no-merges -20)
           else
-            # Get commits since last tag
             COMMITS=$(git log ${PREVIOUS_TAG}..HEAD --pretty=format:"- %s (%h)" --no-merges)
           fi
           
-          # Update CHANGELOG.md following Keep a Changelog format
-          VERSION="v${{ needs.build.outputs.version }}"
-          DATE=$(date +%Y-%m-%d)
-          
-          if [ -f CHANGELOG.md ]; then
-            echo "Updating CHANGELOG.md for $VERSION"
-            tmpfile=$(mktemp)
-            {
-              # Preserve the first line (typically '# Changelog') if present
-              if read -r first_line; then
-                echo "$first_line"
-              fi
-              echo
-              echo "## [$VERSION] - $DATE"
-              echo
-              echo "### What's Changed"
-              echo
-              echo "$COMMITS"
-              echo
-              # Append the rest of the original changelog (if any)
-              cat
-            } < CHANGELOG.md > "$tmpfile"
-            mv "$tmpfile" CHANGELOG.md
-          else
-            echo "CHANGELOG.md not found, creating a new one"
-            {
-              echo "# Changelog"
-              echo ""
-              echo "All notable changes to this project will be documented in this file."
-              echo ""
-              echo "The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),"
-              echo "and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html)."
-              echo ""
-              echo "## [$VERSION] - $DATE"
-              echo ""
-              echo "### What's Changed"
-              echo ""
-              echo "$COMMITS"
-            } > CHANGELOG.md
-          fi
-          
-          # Create release notes
           cat << EOF > release_notes.md
           ## What's Changed
           
@@ -206,37 +78,30 @@ jobs:
           ## Installation
           
           \`\`\`bash
-          npm install codexia@${{ needs.build.outputs.version }}
+          npm install codexia@${{ steps.version.outputs.version }}
           \`\`\`
           
           ## Full Changelog
           
-          ${PREVIOUS_TAG:+https://github.com/${{ github.repository }}/compare/${PREVIOUS_TAG}...v${{ needs.build.outputs.version }}}
+          ${PREVIOUS_TAG:+https://github.com/${{ github.repository }}/compare/${PREVIOUS_TAG}...v${{ steps.version.outputs.version }}}
           ${PREVIOUS_TAG:-First release! 🎉}
           EOF
 
-      - name: Commit version bump
-        run: |
-          git add package.json package-lock.json CHANGELOG.md
-          git commit -m "chore: release v${{ needs.build.outputs.version }}"
-
-      - name: Push changes
-        run: |
-          git push origin "${{ github.event.repository.default_branch }}"
-
       - name: Create and push tag
         run: |
-          git tag ${{ needs.build.outputs.tag }}
-          git push origin ${{ needs.build.outputs.tag }}
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag ${{ steps.version.outputs.tag }}
+          git push origin ${{ steps.version.outputs.tag }}
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ needs.build.outputs.tag }}
-          name: Release ${{ needs.build.outputs.version }}
+          tag_name: ${{ steps.version.outputs.tag }}
+          name: Release ${{ steps.version.outputs.version }}
           body_path: release_notes.md
           prerelease: ${{ inputs.prerelease != '' }}
-          generate_release_notes: false
+          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
