Revert "chore: release v0.3.0"
This reverts commit 3075ea2299422303a53c8c00f264a6634f071bc7.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "codexia",
+  "version": "0.2.0",
   "description": "Engineering intelligence layer for repositories - analyze impact, complexity, history, and enforce architectural invariants",
   "type": "module",
   "main": "dist/index.js",
