feat: Update language support and add metric dashboard (#13)
* feat: add dashboard components and server for Codexia

- Implemented ComplexityHeatmap, ErrorDisplay, HealthScore, HotPathsList, LanguageBreakdown, Loading, and SignalsList components for the dashboard.
- Created custom hooks for API data fetching with useApi.
- Developed a REST API server to serve dashboard data, including endpoints for overview, complexity, graph, signals, hot paths, temporal analysis, and language statistics.
- Added Tailwind CSS for styling and configured Vite for the frontend build process.
- Defined TypeScript types for API responses and components.
- Established a basic CSS structure for the application.

* feat: add detailed modals for file, contributor, commit, signal, hot path, ownership, and health score views

- Implemented FileDetailsModal for displaying file metrics and recommendations.
- Created ContributorDetailsModal to show contributor stats and activity timeline.
- Added CommitDetailsModal for viewing commit messages and author details.
- Developed SignalDetailsModal to present signal severity and suggestions.
- Introduced HotPathDetailsModal for analyzing hot paths with risk factors and recommendations.
- Built OwnershipDetailsModal to display file ownership stats and bus factor risks.
- Created HealthScoreModal for showing repository health score and improvement suggestions.

feat: create reusable Modal component and supporting UI elements

- Developed a generic Modal component with animations and accessibility features.
- Added DetailRow and MetricCard components for structured data presentation.
- Implemented ProgressBar component for visualizing metrics.

feat: add OwnershipPanel and RecentCommits components for ownership and commit tracking

- Created OwnershipPanel to display ownership data, bus factor risks, and top file owners.
- Implemented RecentCommits component to show a list of recent commits with author details.

* docs: add web dashboard for real-time r

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codexia",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Engineering intelligence layer for repositories - analyze impact, complexity, history, and enforce architectural invariants",
   "type": "module",
   "main": "dist/index.js",
@@ -9,13 +9,16 @@
     "codexia": "dist/cli/index.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run build:dashboard",
+    "build:cli": "tsc",
+    "build:dashboard": "cd src/dashboard/client && npm install && npm run build",
     "start": "node dist/cli/index.js",
     "dev": "tsc --watch",
     "test": "vitest",
     "lint": "eslint src --ext .ts",
     "clean": "rm -rf dist",
-    "mcp": "node dist/mcp/server.js"
+    "mcp": "node dist/mcp/server.js",
+    "dashboard": "node dist/cli/index.js dashboard --open"
   },
   "keywords": [
     "code-analysis",
@@ -53,6 +56,7 @@
   },
   "files": [
     "dist",
+    "src/dashboard/dist",
     "README.md",
     "LICENSE",
     "CHANGELOG.md"
